<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_explainpicture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/lbldesc_RatioImg"
                android:scaleType="fitXY"
                android:src="@drawable/ratio" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lbl_ratio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/text_ScreenRatio"
                    app:layout_constraintBottom_toTopOf="@+id/lbl_mainratio"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/lbl_mainratio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_screen"
                    app:layout_constraintBottom_toTopOf="@+id/spinner_left"
                    app:layout_constraintStart_toStartOf="@id/lbl_ratio"
                    app:layout_constraintTop_toBottomOf="@+id/lbl_ratio" />

                <Spinner
                    android:id="@+id/spinner_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:entries="@array/ratios"
                    android:spinnerMode="dialog"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/spinner_right"
                    app:layout_constraintStart_toStartOf="@+id/lbl_mainratio" />


                <TextView
                    android:id="@+id/lbl_compare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/text_compare"
                    app:layout_constraintBottom_toTopOf="@+id/spinner_right"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lbl_mainratio"
                    app:layout_constraintTop_toTopOf="@+id/lbl_mainratio" />

                <Spinner
                    android:id="@+id/spinner_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/lbl_compare"
                    app:layout_constraintTop_toTopOf="@+id/spinner_left" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


        <TableLayout
            android:id="@+id/TableLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="10dp">

            <TableRow
                android:id="@+id/TableRow01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lbl_ScreenText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/text_Screen" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_ScreenDiagonal" />

                <EditText
                    android:id="@+id/edit_Diagonal_left"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:inputType="numberDecimal"
                    android:numeric="decimal"
                    android:singleLine="true"
                    android:text="" />

                <TextView
                    android:id="@+id/lbl_ScreenDiagonalMeastureType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--" />

                <EditText
                    android:id="@+id/edit_Diagonal_right"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:enabled="false"
                    android:inputType="numberDecimal"
                    android:numeric="decimal"
                    android:singleLine="true"
                    android:text="" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_ScreenWidth" />

                <EditText
                    android:id="@+id/edit_Width_left"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:inputType="numberDecimal"
                    android:numeric="decimal"
                    android:singleLine="true"
                    android:text="" />

                <TextView
                    android:id="@+id/lbl_ScreenWidthMeastureType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--" />

                <EditText
                    android:id="@+id/edit_Width_right"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:enabled="false"
                    android:inputType="numberDecimal"
                    android:numeric="decimal"
                    android:singleLine="true"
                    android:text="" />
            </TableRow>

            <TableRow
                android:id="@+id/TableRow04s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_ScreenHeight" />

                <EditText
                    android:id="@+id/edit_Height_left"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:inputType="numberDecimal"
                    android:numeric="decimal"
                    android:singleLine="true"
                    android:text="" />

                <TextView
                    android:id="@+id/lbl_ScreenHeightMeastureType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="--" />

                <EditText
                    android:id="@+id/edit_Height_right"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:enabled="false"
                    android:inputType="numberDecimal"
                    android:numeric="decimal"
                    android:singleLine="true"
                    android:text="" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/lblToggleCmInch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TableLayout01"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/text_ToggleCM_INCH" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/text_ToggledINCH"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Switch
                android:id="@+id/tglCmInchButton"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/text_ToggledCM"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>